# PPO-Q-learning-Fruit-Picking-Robot

./: ARCHITECTURE.md  CONTROLS.md  Future_Updates.md  IMPLEMENTATION_DETAILS.md  INSTALL_WINDOWS.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  analyze_dimensions.py  app.py  config.py  debug_dims.py  env_base.py  environment.py  evaluate_harvester.py  fruit_harvesting_robot.urdf  grip.urdf  gui_control.py  install_and_run.bat  main.py  network_debug.py  orange_harvest_env.py  ppo_training.py  requirements.txt  robot_control.md  robot_control.py  select_action.py  setup.py  setup_and_run.bat  setup_and_verify.bat  setup_env.py  test_dimensions.bat  test_env.py  test_environment.bat  test_ppo.bat  test_ppo.py  train.bat  train_harvester.py  training_implementation.md  training_logger.py  (+3 more)
gazebo_setup/: CMakeLists.txt  README.md  package.xml
gazebo_setup/config/: controllers.yaml
gazebo_setup/launch/: fruit_harvesting_robot.launch
gazebo_setup/src/: keyboard_control_node.cpp  robot_control_plugin.cpp
gazebo_setup/worlds/: orange_farm.world
logs/20250303_090448/: events.out.tfevents.1740972888.DESKTOP-G1J0GG5.17148.0
logs/20250303_092106/: events.out.tfevents.1740973866.DESKTOP-G1J0GG5.15448.0
logs/20250303_093308/: events.out.tfevents.1740974588.DESKTOP-G1J0GG5.1516.0
logs/20250303_101305/: events.out.tfevents.1740976985.DESKTOP-G1J0GG5.12372.0
logs/20250303_103225/: events.out.tfevents.1740978145.DESKTOP-G1J0GG5.16340.0
orange_harvester.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+8 files in other folders)
